Finalização do layout

--- a/index.html
+++ b/index.html
@@ -17,8 +17,28 @@
         </div>
     </div>
     <div class="produtos">
-        <p>Primeiro, seu prato</p>
+        <div class="opcao">
+            <p>Primeiro, seu prato</p>
+        </div>
         <div class="lista_produtos">
+            <div class="produto" onclick="selecionar(this)">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
             <div class="produto">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
@@ -26,6 +46,67 @@
                 <p class="preco">R$ 14,90</p>
             </div>
         </div>
+        <div class="opcao">
+            <p>Agora, sua bebida</p>
+        </div>
+        <div class="lista_produtos">
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+        </div>
+        <div class="opcao">
+            <p>Por fim, sua sobremesa</p>
+        </div>
+        <div class="lista_produtos">
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+            <div class="produto">
+                <img src="./imgs/frango_yin_yang.png" alt="">
+                <p class="nome_prato">Frango Yin Yang</p>
+                <span>Um pouco de batata, um pouco de salada</span>
+                <p class="preco">R$ 14,90</p>
+            </div>
+        </div>     
+    </div>
+    <div class="footer">
+        <button disabled="disabled"> Selecione os 3 itens para fechar o pedido</button>
     </div>
 </body>
 </html>
