Seleção dos produtos

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <p>Primeiro, seu prato</p>
         </div>
         <div class="lista_produtos">
-            <div class="produto" onclick="selecionar(this)">
+            <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
@@ -50,25 +50,25 @@
             <p>Agora, sua bebida</p>
         </div>
         <div class="lista_produtos">
-            <div class="produto">
+            <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
@@ -79,25 +79,25 @@
             <p>Por fim, sua sobremesa</p>
         </div>
         <div class="lista_produtos">
-            <div class="produto">
+            <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
             </div>
-            <div class="produto">
+            <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
