Finalização do requisitos obrigatórios

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Driven Eats</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <script src="./js/script.js" defer></script> <!--TODO: trocar-->
 </head>
 <body>
     <div class="header">
@@ -26,24 +26,28 @@
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
         </div>
         <div class="opcao">
@@ -55,24 +59,28 @@
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
         </div>
         <div class="opcao">
@@ -84,29 +92,35 @@
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
                 <img src="./imgs/frango_yin_yang.png" alt="">
                 <p class="nome_prato">Frango Yin Yang</p>
                 <span>Um pouco de batata, um pouco de salada</span>
                 <p class="preco">R$ 14,90</p>
+                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
             </div>
         </div>     
     </div>
     <div class="footer">
-        <button disabled="disabled"> Selecione os 3 itens para fechar o pedido</button>
+        <button disabled onclick="fazerPedido()"> Selecione os 3 itens para fechar o pedido</button>
     </div>
+    <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script> 
+    <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
