Correção do Icon 'Check', variação das imgs e descrição/preço dos produtos

--- a/index.html
+++ b/index.html
@@ -22,65 +22,82 @@
         </div>
         <div class="lista_produtos">
             <div class="produto" onclick="selecionarPrato(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
+                <div class="img_produto">
+                    <img src="./imgs/frango_yin_yang.png" alt="">
+                </div>
                 <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <span>Frango acompanhado de batata frita e salada</span>
+                <p class="preco">R$ 27,90</p>
+                <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/arroz_carreteiro.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Arroz Carreteiro</p>
+                <span>Arroz com carne seca picada e bacon</span>
+                <p class="preco">R$ 37,70</p>
+                <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/frango_passarinho.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Frango a passarinho</p>
+                <span>Frango sequinho acompado de molho</span>
+                <p class="preco">R$ 19,90</p>
+                <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarPrato(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/lasanha_bolonhesa.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Lasanha à Bolonhesa</p>
+                <span>Lasanha de carne com arroz</span>
+                <p class="preco">R$ 45,90</p>
+                <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
             </div>
+
         </div>
         <div class="opcao">
             <p>Agora, sua bebida</p>
         </div>
         <div class="lista_produtos">
             <div class="produto" onclick="selecionarBebida(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/coca-cola.png" alt="">
+                </div>
+                <p class="nome_prato">Refrigerante lata</p>
+                <span>Sabores variados</span>
+                <p class="preco">R$ 6,90</p>
+                <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/refris_2l.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Refrigerante 2L</p>
+                <span>Sabores Variados</span>
+                <p class="preco">R$ 12,00</p>
+                <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/sucos_variados.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Copo de Suco</p>
+                <span>Sabores variados</span>
+                <p class="preco">R$ 8,90</p>
+                <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarBebida(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/cervejas.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Cervejas 600ml</p>
+                <span>Sabores variados</span>
+                <p class="preco">R$ 9,90</p>
+                <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
         </div>
         <div class="opcao">
@@ -88,33 +105,42 @@
         </div>
         <div class="lista_produtos">
             <div class="produto" onclick="selecionarSobremesa(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/financier.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Financier (3 un)</p>
+                <span>Pequeno bolo francês de amêndoa</span>
+                <p class="preco">R$ 15,90</p>
+                <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/mousse.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Mousse de Maracujá</p>
+                <span>Uma mousse de maracujá com 400ml</span>
+                <p class="preco">R$ 10,90</p>
+                <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
-                <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <div class="img_produto">
+                    <img src="./imgs/petit_gateau.jpeg" alt="">
+                </div>
+                <p class="nome_prato">Petit Gateau</p>
+                <span>Petit Gateau com sorvete branco</span>
+                <p class="preco">R$ 19,90</p>
+                <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
             <div class="produto" onclick="selecionarSobremesa(this)">
-                <img src="./imgs/frango_yin_yang.png" alt="">
-                <p class="nome_prato">Frango Yin Yang</p>
-                <span>Um pouco de batata, um pouco de salada</span>
+                <div class="img_produto">
+                    <img src="./imgs/pudim.png" alt="">
+                </div>
+                <p class="nome_prato">Pudim</p>
+                <span>Pudim sem maisena(Oh, glória)</span>
                 <p class="preco">R$ 14,90</p>
-                <ion-icon  class="check desabilitado" name="checkmark-circle"></ion-icon>
+                <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
             </div>
+            
         </div>     
     </div>
     <div class="footer">
