--- a/index.html
+++ b/index.html
@@ -21,40 +21,40 @@
                 <p>Primeiro, seu prato</p>
             </div>
             <div class="lista_produtos">
-                <div class="produto" onclick="selecionarPrato(this)">
+                <div data-test="dish" class="produto" onclick="selecionarPrato(this)">
                     <div class="img_produto">
                         <img src="./imgs/frango_yin_yang.png" alt="">
                     </div>
                     <p class="nome_prato">Frango Yin Yang</p>
-                    <span>Frango acompanhado de batata frita e salada</span>
-                    <p class="preco">R$ 27,90</p>
+                    <span data-test="item-name">Frango acompanhado de batata frita e salada</span>
+                    <p data-test="item-price" class="preco">R$ 27,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarPrato(this)">
+                <div data-test="dish" class="produto" onclick="selecionarPrato(this)">
                     <div class="img_produto">
                         <img src="./imgs/arroz_carreteiro.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Arroz Carreteiro</p>
-                    <span>Arroz com carne seca picada e bacon</span>
-                    <p class="preco">R$ 37,70</p>
+                    <span data-test="item-name">Arroz com carne seca picada e bacon</span>
+                    <p data-test="item-price" class="preco">R$ 37,70</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarPrato(this)">
+                <div data-test="dish" class="produto" onclick="selecionarPrato(this)">
                     <div class="img_produto">
                         <img src="./imgs/frango_passarinho.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Frango a passarinho</p>
-                    <span>Frango sequinho acompado de molho</span>
-                    <p class="preco">R$ 19,90</p>
+                    <span data-test="item-name">Frango sequinho acompado de molho</span>
+                    <p data-test="item-price" class="preco">R$ 19,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarPrato(this)">
+                <div data-test="dish" class="produto" onclick="selecionarPrato(this)">
                     <div class="img_produto">
                         <img src="./imgs/lasanha_bolonhesa.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Lasanha à Bolonhesa</p>
-                    <span>Lasanha de carne com arroz</span>
-                    <p class="preco">R$ 45,90</p>
+                    <span data-test="item-name">Lasanha de carne com arroz</span>
+                    <p data-test="item-price" class="preco">R$ 45,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
 
@@ -63,40 +63,40 @@
                 <p>Agora, sua bebida</p>
             </div>
             <div class="lista_produtos">
-                <div class="produto" onclick="selecionarBebida(this)">
+                <div data-test="drink" class="produto" onclick="selecionarBebida(this)">
                     <div class="img_produto">
                         <img src="./imgs/coca-cola.png" alt="">
                     </div>
                     <p class="nome_prato">Refrigerante lata</p>
-                    <span>Sabores variados</span>
-                    <p class="preco">R$ 6,90</p>
+                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-price" class="preco">R$ 6,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarBebida(this)">
+                <div data-test="drink" class="produto" onclick="selecionarBebida(this)">
                     <div class="img_produto">
                         <img src="./imgs/refris_2l.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Refrigerante 2L</p>
-                    <span>Sabores Variados</span>
-                    <p class="preco">R$ 12,00</p>
+                    <span data-test="item-name">Sabores Variados</span>
+                    <p data-test="item-price" class="preco">R$ 12,00</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarBebida(this)">
+                <div data-test="drink" class="produto" onclick="selecionarBebida(this)">
                     <div class="img_produto">
                         <img src="./imgs/sucos_variados.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Copo de Suco</p>
-                    <span>Sabores variados</span>
-                    <p class="preco">R$ 8,90</p>
+                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-price" class="preco">R$ 8,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarBebida(this)">
+                <div data-test="drink" class="produto" onclick="selecionarBebida(this)">
                     <div class="img_produto">
                         <img src="./imgs/cervejas.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Cervejas 600ml</p>
-                    <span>Sabores variados</span>
-                    <p class="preco">R$ 9,90</p>
+                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-price" class="preco">R$ 9,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
             </div>
@@ -104,54 +104,54 @@
                 <p>Por fim, sua sobremesa</p>
             </div>
             <div class="lista_produtos">
-                <div class="produto" onclick="selecionarSobremesa(this)">
+                <div data-test="dessert" class="produto" onclick="selecionarSobremesa(this)">
                     <div class="img_produto">
                         <img src="./imgs/financier.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Financier (3 un)</p>
-                    <span>Pequeno bolo francês de amêndoa</span>
-                    <p class="preco">R$ 15,90</p>
+                    <span data-test="item-name">Pequeno bolo francês de amêndoa</span>
+                    <p data-test="item-price" class="preco">R$ 15,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarSobremesa(this)">
+                <div data-test="dessert" class="produto" onclick="selecionarSobremesa(this)">
                     <div class="img_produto">
                         <img src="./imgs/mousse.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Mousse de Maracujá</p>
-                    <span>Uma mousse de maracujá com 400ml</span>
-                    <p class="preco">R$ 10,90</p>
+                    <span data-test="item-name">Uma mousse de maracujá com 400ml</span>
+                    <p data-test="item-price" class="preco">R$ 10,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarSobremesa(this)">
+                <div data-test="dessert" class="produto" onclick="selecionarSobremesa(this)">
                     <div class="img_produto">
                         <img src="./imgs/petit_gateau.jpeg" alt="">
                     </div>
                     <p class="nome_prato">Petit Gateau</p>
-                    <span>Petit Gateau com sorvete branco</span>
-                    <p class="preco">R$ 19,90</p>
+                    <span data-test="item-name">Petit Gateau com sorvete branco</span>
+                    <p data-test="item-price" class="preco">R$ 19,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="produto" onclick="selecionarSobremesa(this)">
+                <div data-test="dessert" class="produto" onclick="selecionarSobremesa(this)">
                     <div class="img_produto">
                         <img src="./imgs/pudim.png" alt="">
                     </div>
                     <p class="nome_prato">Pudim</p>
-                    <span>Pudim sem maisena(Oh, glória)</span>
-                    <p class="preco">R$ 14,90</p>
+                    <span data-test="item-name">Pudim sem maisena(Oh, glória)</span>
+                    <p data-test="item-price" class="preco">R$ 14,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
                 
             </div>     
         </div>
         <div class="footer">
-            <button class="fazerPedido" disabled onclick="confirmarPedido()"> Selecione os 3 itens para fechar o pedido</button>
+            <button data-test="order-btn" class="fazerPedido" disabled onclick="confirmarPedido()"> Selecione os 3 itens para fechar o pedido</button>
         </div>
-    </div>
-    <div class="escolhendo">
+    </div>     
+    <div data-test="confirm-order-modal" class="escolhendo">
         <p class="text">Confirme seu pedido</p>
         <div class="itens"></div>
-        <button class="pedir" onclick="fazerPedido()">Tudo certo, pode pedir!</button>
-        <a class="cancelar" onclick="cancelar()">Cancelar</a>
+        <button data-test="confirm-order-btn class="pedir" onclick="fazerPedido()">Tudo certo, pode pedir!</button>
+        <button data-test="cancel-order-btn" class="cancelar" onclick="cancelar()">Cancelar</button>
     </div>
     <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script> 
     <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
