--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div data-test="confirm-order-modal" class="escolhendo">
         <p class="text">Confirme seu pedido</p>
         <div class="itens"></div>
-        <button data-test="confirm-order-btn class="pedir" onclick="fazerPedido()">Tudo certo, pode pedir!</button>
+        <button data-test="confirm-order-btn" class="pedir" onclick="fazerPedido()">Tudo certo, pode pedir!</button>
         <button data-test="cancel-order-btn" class="cancelar" onclick="cancelar()">Cancelar</button>
     </div>
     <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script> 
